--- a/README
+++ b/README
@@ -1,3 +1,5 @@
-Rajiv And Shalini
-Welcome yo
+Fitness planner app
+Specs:
+REST API implemented in Express
+Web app written in backbone.js with views for mobile and desktop web.
 
